# weather-forecast-server

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: demo.py
tests/: test_weather.py
weather_forecast_server/: __init__.py  __main__.py  server.py  weather.py
