[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weather-forecast-server"
version = "0.1.0"
description = "An MCP server for retrieving weather information"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "XuMing", email = "xuming624@qq.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache-2.0 License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "pytest-cov",
    "mypy",
    "types-requests",
]

[project.scripts]
mcp-server-weather = "weather_forecast_server.__main__:main"

[project.urls]
"Homepage" = "https://github.com/shibing624/weather-forecast-server"
"Bug Tracker" = "https://github.com/shibing624/weather-forecast-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["weather_forecast_server"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true 